@@ -1,3 +1,13 @@
+1999-11-03  Per Bothner  <per@bothner.com>
+
+	* Type.java (isSubtype):  Use new isSubclass method from ClassType.
+	(compare):  New virtual method.
+	(swappedCompareResult):  New static method.
+	* ClassType (compare, isSubclass, isInterface):  New methods.
+	* PrimType.java (compare):  New virtual method.
+	(compare):  New static method.
+	* ArrayType.java (compare):  New virtual method.
+
 1999-10-25  Per Bothner  <per@bothner.com>
 
 	* ObjectType.java (coerceFromObject):  Allow null as input.
